[package]
name = "ssdp-probe"
version = "0.1.0"
authors = ["Thibaut Lorrain <fredszaq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.3"
thiserror = "1.0"
log = "0.4"
pretty_env_logger = { version = "0.4.0", optional = true }

[features]
default = []
# used to get logs in the demo binary
envlogger = ["pretty_env_logger"]
