[package]
name = "ssdp-probe"
version = "0.2.2-pre" # don't forget to update readme when doing a release
authors = ["Thibaut Lorrain <fredszaq@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Simple rust crate to perform SSDP discovery"
readme = "README.md"
homepage = "https://github.com/fredszaq/ssdp-probe-rs"
repository = "https://github.com/fredszaq/ssdp-probe-rs"
keywords = ["upnp", "ssdp", "discovery"]
categories = ["config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.3.12"
thiserror = "1.0"
log = "0.4"
pretty_env_logger = { version = "0.4.0", optional = true }

[features]
default = []
# used to get logs in the demo binary
envlogger = ["pretty_env_logger"]
